--- a/templates/rooms/room_list.html
+++ b/templates/rooms/room_list.html
@@ -4,25 +4,43 @@
 
 {% block content %}
 
-    {% for room in object_list %}
-        <h3>
-        <a href="{% url "rooms:detail" room.pk %}">
-        {{room.name}} / ${{room.price}}
-        </a></h3>
-    {% endfor %}
+    <div class="container mx-auto pb-10">
 
-    <h5>
-    {% if page_obj.has_previous %}
-        <a href="?page={{page_obj.previous_page_number}}">Previous</a>
-    {% endif %}
+        <div class="rounded-xl bg-gray-800 -mx-40 h-50vh mt-32 mb-24 bg-cover bg-center" 
+        style="background-image: url(https://images.unsplash.com/photo-1501504905252-473c47e087f8?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1267&q=80);">
     
-    Page {{page_obj.number}} of {{ page_obj.paginator.num_pages}}
-    
-    {% if page_obj.has_next %}
-        <a href="?page={{page_obj.next_page_number}}">Next</a>
-    {% endif %}
+        </div>
 
-    </h5>
+        <div class="flex flex-wrap -mx-40 mb-10">
+        {% for room in object_list %}
+            {% include 'mixins/room_card.html' with room=room %}
+        {% endfor %}
+        </div>
+
+        <div class="flex items-center justify-center">
+        
+            {% if page_obj.has_previous %}
+                <a href="?page={{page_obj.previous_page_number}}" class="text-teal-500">
+                    <i class="fas fa-arrow-left"></i>
+                </a>
+            {% endif %}
+            
+            <span class="mx-3 font">
+                {{page_obj.number}} of {{ page_obj.paginator.num_pages}}
+            </span>
+
+            {% if page_obj.has_next %}
+                <a href="?page={{page_obj.next_page_number}}" class="text-teal-500">
+                    <i class="fas fa-arrow-right"></i>
+                </a>
+            {% endif %}
+    
+        </div>
+
+    </div>
+
+    
+
 
 
 
