--- a/templates/users/login.html
+++ b/templates/users/login.html
@@ -8,12 +8,18 @@
 {% endblock search-bar %} 
 
 {% block content %} 
+<div class="container xl:w-1/4 lg:w-5/12 md:w-1/2 mx-auto my-10 flex flex-col items-center border p-6 border-gray-400">
 
     {% include 'partials/social_login.html' %}
-  
-   <form method="POST" action="{% url 'users:login' %}">
-       {% csrf_token %}
-       {{form.as_p}}
-       <button>login</button>
-   </form>
+
+    {% include 'mixins/auth/auth_form.html' with form=form cta='로그인' %}
+
+    <div class="mt-5">
+        <span class="mr-2">Don't have an account</span>
+        <a href="{% url 'users:signup' %}" class="text-teal-500">
+            Sign up
+        </a>
+    </div>
+
+</div>
 {% endblock content %}
