--- a/templates/mixins/room/room_form.html
+++ b/templates/mixins/room/room_form.html
@@ -6,10 +6,13 @@
             <span class="text-red-700 font-medium text-sm">{{ error }}</span> 
         {% endfor %}    
     {% endif %}
+
     
     {% for field in form  %}
-        {% include 'mixins/auth/form_input.html' with field=field %}
+        {% include 'mixins/room/room_input.html' with field=field %}
     {% endfor %}
         
+
+
    <button class="btn bg-red-500 text-white font-bold">{{ cta }}</button>
 </form>
