--- a/templates/rooms/room_detail.html
+++ b/templates/rooms/room_detail.html
@@ -1,22 +1,150 @@
 {% extends "base.html" %}
+{% load is_booked %}
 
-{% block page_name %}Detail{% endblock %}
+{% block page_name %}{{ room.name }}{% endblock %}
 
 {% block content %}
-<div>
-    <h1>{{ room.name }}</h1>
-    <h3>{{room.description }}</h3>
+
+<div class="-mt-5 container max-w-full h-75vh flex mb-20">
+    <div class="h-full w-1/2 bg-cover bg-center border border-gray-500" style="background-image: url({{room.first_photo}});">    </div>
+    <div class="h-full w-1/2 flex flex-wrap">
+        
+        {% for photo in room.get_next_four_photos  %}
+            <div style="background-image: url({{photo.file.url}});" class="w-1/2 h-auto bg-cover bg-center border border-gray-500"></div>
+        {% endfor %}
+            
+    </div>
 </div>
-<div>
-    <h2>
-        By: {{ room.host.username }}
-        {% if room.host.superhost %}
-        (superhost)
+
+<div class="container mx-auto flex justify-around pb-56">
+    <div class="w-1/2">
+        <div class="flex justify-between">
+            <div class="mr-8 mb-5">
+                <h4 class="text-3xl font-medium mb-px">{{room.name}}</h4>
+                <span class="text-gray-700 font-light">{{ room.city }}</span>
+            </div>
+            <a href="{{room.host.get_absolute_url}}" class="flex flex-col items-center">
+                {% include 'mixins/user_avatar.html' with user=room.host %}
+                <span class="mt-2 text-gray-500">{{ room.host.first_name }}</span>
+            </a>
+        </div>
+        <div class="flex border-section">
+            <span class="mr-5 font-light">{{ room.room_type }}</span>
+            <span class="mr-5 font-light">{{ room.beds }} bed{{ room.beds|pluralize }}</span>
+            <span class="mr-5 font-light">{{ room.baths }} bath{{ room.baths|pluralize }}</span>
+            <span class="mr-5 font-light">{{ room.bedrooms }} bedrooms{{ room.bedrooms|pluralize }}</span>
+            <span class="mr-5 font-light">{{ room.guests }} guests{{ room.guests|pluralize }}</span>
+        </div>
+        <p class="border-section">
+            {{ room.description }}
+        </p>
+        <div class="border-section">
+            <h4 class="font-medium text-lg mb-5">Amenities</h4>
+            
+            {% for a in room.amenities.all %}
+                <li class="mb-2">{{a}}</li>
+            {% endfor %}
+                
+        </div>
+        <div class="border-section">
+            <h4 class="font-medium text-lg mb-5">Facilities</h4>
+            
+            {% for f in room.facilities.all %}
+                <li class="mb-2">{{f}}</li>
+            {% endfor %}
+                
+        </div>
+        <div class="border-section">
+            <h4 class="font-medium text-lg mb-5">House Rules</h4>
+            
+            {% for h in room.house_rules.all %}
+                <li class="mb-2">{{h}}</li>
+            {% endfor %}
+                
+        </div>
+        <div class="mt-10">
+            <h4 class="font-medium text-2xl mb-5">Reviews</h4>
+            <div class="flex  items-center">
+                <div>
+                    <i class="fas fa-star text-teal-500"></i>
+                    <span class="font-bold text-xl">{{ room.total_rating}}</span>
+                </div>
+                <div class="h-5 w-px bg-gray-400 mx-5"></div>
+                <div>
+                    <span class="font-bold text-xl">{{ room.reviews.count }} </span>
+                    <span>review{{ room.reviews.count|pluralize }}</span>
+                </div>
+            </div>
+            <div class="mt-10">
+                
+                {% for review in room.reviews.all  %}
+                <div class="border-section">
+                    <div class="mb-3 flex">
+                        <div class="py-1">
+                            {% include "mixins/user_avatar.html" with user=review.user h_and_w='w-10 h-10' text='xl' %}
+                        </div>
+                        <div class="flex flex-col ml-5">
+                            <span class="font-medium">{{review.user.first_name}}</span>
+                            <span class="text-sm text-gray-500">{{review.created|date:'F Y'}}</span>
+                        </div>
+                    </div>
+                    <p>{{ review.review }}</p>
+                </div>
+                    
+                {% endfor %}
+                    
+            </div>
+        </div>
+    </div>
+    <div class="w-1/3">
+        
+        {% if room.host == user %}
+        <a href="{% url 'rooms:edit' room.pk %}" class="btn-link block">Edit Room</a>
+
+        {% else %}
+           
+            {% if not request.session.is_hosting %}
+               
+               {% for calendar in room.get_calendars  %}
+
+                <div class="mb-20">
+                    <span class="text-center font-bold text-lg block mb-8">{{ calendar.get_month}}. {{ calendar.year}}</span>
+                    <div class="cal-grid font-medium mb-4">
+                    {% for day in calendar.day_names  %}
+                        <span>{{day}}</span>
+                    {% endfor %}
+                    </div>
+                    <div class="cal-grid">
+                        
+                        {% for day in calendar.get_days %}
+                            {% is_booked room day as is_booked_bool %}
+                            {% if day.number != 0 %}
+                            
+                                {% if day.past %}
+                                <span class="rounded bg-gray-200 w-full text-center p1 text-gray-400 py-1">{{day}}</span>
+                                {% elif is_booked_bool %}
+                                <span class="rounded bg-teal-200 w-full text-center p1 text-xs text-teal-600 py-2">예약</span>
+                                {% else %}
+                                <span class="bg-gray-200 w-full text-center rounded text-gray-700 p-1 hover:bg-teal-400 hover:font-medium hover:text-white cursor-pointer">{{day}}</span>
+                                {% endif %}
+                                
+                            {% else %}
+                            <span></span>
+                            {% endif %}
+                                
+                        {% endfor %}
+                            
+                    </div>
+                </div>
+
+               {% endfor %}
+                   
+            {% endif %}
+                
         {% endif %}
-    </h2>
-    <h3>Amenities</h3>
-    {% for a in room.amenities.all %}
-    <li>{{ a }}</li>
-    {% endfor %}
+            
+        
+    </div>
 </div>
+
 {% endblock %}
