--- a/templates/base.html
+++ b/templates/base.html
@@ -1,4 +1,5 @@
 {% load static %}
+{% load i18n %}
 
 <!DOCTYPE html>
 <html lang="en">
@@ -21,7 +22,10 @@
             {% block search-bar %}
             
             <form method="get" action="{% url "rooms:search" %}" class="w-9/12">
-                <input class="search-box border px-5 text-sm font-medium text-gray-900 placeholder-gray-600 py-3 rounded-sm w-64 shadow-md hover:shadow-lg focus:outline-none" name="city" placeholder="Search by City" />
+                <input 
+                class="search-box border px-5 text-sm font-medium text-gray-900 placeholder-gray-600 py-3 rounded-sm w-64 shadow-md hover:shadow-lg focus:outline-none" 
+                name="city" 
+                placeholder="{% trans 'Search by City' %}" />
             </form>
             {% endblock search-bar %}
         </div>
@@ -31,6 +35,16 @@
 
     
     {% include "partials/footer.html" %}
+
+    <script>
+        const langSelect = document.getElementById("js-lang");
+        const handelLangChange = () => {
+            const selected = langSelect.value;
+            fetch(`{% url 'users:switch-language' %}?lang=${selected}`).then(() => window.location.reload());
+            window.location.reload();
+        }
+        langSelect.addEventListener("change", handelLangChange)
+    </script>
 
 </body>
 
