--- a/templates/partials/footer.html
+++ b/templates/partials/footer.html
@@ -1,3 +1,18 @@
+{% load i18n %}
 <footer class="container mx-auto text-center py-10 border-t font-medium text-gray-500">
-    &copy;2020 i All rights reserved.
+    <div class="flex flex-col">
+        <span>
+            {% trans "Please Don't Copy Us" %}
+        </span>
+        <span>
+            &copy;2020 i All rights reserved. {% trans "All Rights Reserved" %}.
+        </span>
+    </div>
+    <div class="-mt-10 flex">
+        {% get_current_language as LANGUAGE_CODE %}
+        <select class="w-1/5 h-8 text-sm p-px" id="js-lang">
+            <option value="en" {% if LANGUAGE_CODE == 'en' %} selected {% endif %}>English</option>
+            <option value="ko" {% if LANGUAGE_CODE == 'ko' %} selected {% endif %}>한국어</option>
+        </select>
+    </div>
 </footer>
