--- a/templates/rooms/room_list.html
+++ b/templates/rooms/room_list.html
@@ -1,4 +1,5 @@
 {% extends "base.html" %}
+{% load i18n %}
 
 {% block page_name %}Home{% endblock %}
 
@@ -25,8 +26,8 @@
                 </a>
             {% endif %}
             
-            <span class="mx-3 font">
-                {{page_obj.number}} of {{ page_obj.paginator.num_pages}}
+            <span class="mx-3 font-medium">
+                {% blocktrans with current_page=page_obj.number total_pages=page_obj.paginator.num_pages %}page {{ current_page }} of {{ total_pages }} {% endblocktrans %}
             </span>
 
             {% if page_obj.has_next %}
